# sqlite-wasm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VFS.md  build.rs  docsrs.toml  package-lock.json  package.json  pr.md  rollup.config.js  sqlite3.js  sqlite_sdk.js
.github/workflows/: precompile.yml  test.yml
crates/rsqlite-vfs/: Cargo.toml
crates/rsqlite-vfs/src/: ffi.rs  lib.rs  memvfs.rs
crates/sqlite-mem-vfs/: Cargo.toml
crates/sqlite-mem-vfs/src/: lib.rs  memvfs.rs
crates/sqlite-vfs/: Cargo.toml
crates/sqlite-vfs/src/: lib.rs
crates/sqlite-wasm-libc/: README.md
crates/sqlite-wasm-rs-sys/: Cargo.toml  build.rs
crates/sqlite-wasm-rs-sys/src/: error.rs  lib.rs  sqlite3_bindgen.rs
crates/sqlite-wasm-vec/: Cargo.toml  README.md  build.rs
crates/sqlite-wasm-vec/src/: lib.rs  shim.rs
crates/sqlite-wasm-vec/vec/: shim.h  wasm-shim.h
crates/sqlite-wasm-vfs/: Cargo.toml  README.md  docsrs.toml
crates/sqlite-wasm-vfs/src/: lib.rs  relaxed_idb.rs  sahpool.rs
crates/wsqlite3-sys/: Cargo.toml  build.rs
crates/wsqlite3-sys/src/: lib.rs
docs/: ADDING_EXTENSIONS.md
examples/custom-libc/: Cargo.toml  README.md
examples/custom-libc/src/: lib.rs  shim.rs
examples/implement-a-vfs/: Cargo.toml  README.md
examples/implement-a-vfs/src/: lib.rs
examples/multithreading/: Cargo.toml  README.md  index.html  start.js  worker.js
examples/multithreading/src/: lib.rs
examples/nodejs/: Cargo.toml  README.md  index.js
examples/nodejs/src/: lib.rs
examples/use-prebuild-lib/: Cargo.toml  README.md
examples/use-prebuild-lib/.cargo/: config.toml
examples/use-prebuild-lib/src/: lib.rs
extensions/sqlite-vec/: Cargo.toml  README.md  build.rs  docsrs.toml
extensions/sqlite-vec/cc/: shim  sqlite3.h
extensions/sqlite-vec/src/: lib.rs
extensions/sqlite-vec/vec/: sqlite3ext.h
extensions/uuid4/: Cargo.toml  README.md  build.rs
extensions/uuid4/c/: uuid4.c
extensions/uuid4/src/: lib.rs
extensions/uuid7/: Cargo.toml  README.md  build.rs
extensions/uuid7/c/: uuid7.c
extensions/uuid7/src/: lib.rs
script/: bindgen.sh  printf.sh  sqlite3_upgrade.sh  sqlite3mc_upgrade.sh
shim/: wasm-shim.h
shim/musl/internal/: floatscan.c
sqlite-wasm-builder/: Cargo.toml
sqlite-wasm-builder/src/: main.rs
sqlite-wasm-libc/: Cargo.toml
sqlite-wasm-macro/: Cargo.toml  README.md
sqlite-wasm-macro/src/: lib.rs
sqlite-wasm-rs/: Cargo.toml  README.md  VFS.md  build.rs  rollup.config.js
sqlite-wasm-rs/shim/: wasm-shim.c  wasm-shim.h
sqlite-wasm-rs/shim/printf/: README.md
sqlite-wasm-rs/source/: Makefile  wasm-shim.c  wasm-shim.h
sqlite-wasm-rs/sqlite-wasm/: index.mjs  sqlite3-bundler-friendly.mjs  sqlite3.wasm
sqlite-wasm-rs/sqlite3/: bindgen.rs  upgrade.sh
sqlite-wasm-rs/sqlite3mc/: sqlite3mc_amalgamation.h  upgrade.sh
sqlite-wasm-rs/src/: c.rs  fragile.rs  lib.rs  locker.rs  shim.rs  wasm.rs
sqlite-wasm-rs/src/libsqlite3/: bindings.rs  mod.rs  sqlite3_bindgen.rs  sqlite3mc_bindgen.rs
sqlite-wasm-rs/src/link/: mod.rs  polyfill.rs
sqlite-wasm-rs/src/polyfill/: fill.rs  mod.rs
sqlite-wasm-rs/src/polyfill/vfs/: memory.rs  mod.rs  sahpool.rs
sqlite-wasm-rs/src/shim/: impl.rs  mod.rs
sqlite-wasm-rs/src/shim/libsqlite3/: bindings.rs  mod.rs
sqlite-wasm-rs/src/shim/vfs/: idb.rs  memory.rs  mod.rs  sahpool.rs  utils.rs
sqlite-wasm-rs/src/vfs/: README.md  idb.rs  idbpool.rs  memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs  utils.rs
sqlite-wasm-rs/src/wrapper/: c.rs  mod.rs  wasm.rs
sqlite-wasm-rs/tests/: main.rs
sqlite-wasm-rs/tests/allin/: mod.rs  sqlite3mc.rs
sqlite-wasm-rs/tests/allin/vfs/: memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs
sqlite-wasm-rs/tests/full/: sqlite3mc.rs
sqlite-wasm-rs/tests/full/vfs/: memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs
sqlite-wasm-rs/tests/tests/: aux.rs  auxdata.rs  bind64.rs  column_metadata.rs  common.rs  hook.rs  idb_vfs.rs  memory_vfs.rs  mod.rs  polyfill_vfs.rs  sahpool_vfs.rs  shim_vfs.rs  status.rs  trigger.rs  vfs.rs  wrapper_vfs.rs
sqlite-wasm-rs/tests/vfs/: idbpool.rs  memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs
sqlite-wasm/sqlite-wasm/jswasm/: sqlite3-bundler-friendly.mjs
sqlite3/: README.md  upgrade.sh
sqlite3/ext/: uuid.c  uuid4.c
sqlite3mc/: sqlite3mc_amalgamation.h  upgrade.sh
src/: c.rs  ffi.rs  fragile.rs  lib.rs  memvfs.rs  multithreading.rs  shim.rs  utils.rs  wasm.rs
src/bindings/: mod.rs  sqlite3_bindgen.rs  sqlite3mc_bindgen.rs
src/jswasm/: sqlite3.js
src/libsqlite3/: bindings.rs  mod.rs  sqlite3_bindgen.rs  sqlite3mc_bindgen.rs
src/libsqlite3_sys/: error.rs  mod.rs
src/vfs/: memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs  utils.rs
tests/: Cargo.toml  main.rs  test_main.rs
tests/full/vfs/: sahpool.rs
tests/tests/: bind64.rs  column_metadata.rs  common.rs  hook.rs  mod.rs  status.rs  vfs.rs
tests/tests/full/: mod.rs  sqlite3mc.rs  uuid4_verify.rs  uuid7_verify.rs  uuid_verify.rs
tests/tests/full/vfs/: memory.rs  mod.rs  relaxed_idb.rs  sahpool.rs
