[package]
name = "sqlite-wasm-rs"
version = "0.5.1"
links = "wsqlite3"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "`wasm32-unknown-unknown` bindings to the libsqlite3 library."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "javascript"]
rust-version = "1.82.0"
include = [
    'src/**/*.rs',
    'build.rs',
    'sqlite3/**/*.c',
    'sqlite3/**/*.h',
    'sqlite3mc/**/*.c',
    'sqlite3mc/**/*.h',
    'shim/**/*.h',
    'shim/**/*.c',
    'Cargo.toml',
    '/README.md',
    'LICENSE',
]

[dependencies]
wasm-bindgen = { version = "0.2.104", default-features = false }
js-sys = { version = "0.3.81", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher"] }

[features]
# SQLite3MultipleCiphers
# <https://github.com/utelle/SQLite3MultipleCiphers>
# <https://utelle.github.io/SQLite3MultipleCiphers>
sqlite3mc = []

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[build-dependencies]
cc = "1.2.27"
bindgen = { version = "0.72", optional = true }

[workspace]
resolver = "2"
members = [
  "tests",
  "crates/sqlite-wasm-libc",
  "crates/sqlite-wasm-vfs",
  "extensions/sqlite-vec",
  "examples/implement-a-vfs",
  "examples/nodejs",
  "examples/use-prebuild-lib"
]

[patch.crates-io]
sqlite-wasm-rs = { path = "./" }
sqlite-wasm-vfs = { path = "./crates/sqlite-wasm-vfs" }
