[package]
name = "sqlite-wasm-macro"
version = "0.1.2"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-macro"
description = "Helps generate multithreading code"
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "javascript"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.92", features = ["full"] }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
