[package]
name = "sqlite-wasm-rs"
version = "0.3.1"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "Provide sqlite solution for wasm32-unknown-unknown target."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "javascript"]

[dependencies]
fragile = "2.0.0"
once_cell = "1.20.2"
tokio = { version = "1.42.0", features = ["sync"] }
parking_lot = "0.12.3"
thiserror = "2.0.11"

js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.77", features = [
  "Performance",
  "Window",
  "Navigator",
  "StorageManager",
  "FileSystemSyncAccessHandle",
  "FileSystemDirectoryHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemReadWriteOptions",
  "SharedWorkerGlobalScope",
  "ServiceWorkerGlobalScope",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "FileSystemGetFileOptions",
  "FileSystemFileHandle",
  "Url",
]}
indexed_db_futures = "0.6.1"

sqlite-wasm-libc = { path = "../sqlite-wasm-libc", version = "0.1.0", optional = true }

[features]
default = ["bundled"]
bundled = ["xshell"]
buildtime-bindgen = ["bindgen"]
precompiled = []
custom-libc = ["sqlite-wasm-libc"]

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
web-time = "1.1.0"

[build-dependencies]
bindgen = { version = "0.71", optional = true }
xshell = { version = "0.2.7", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["precompiled"]
targets = ["wasm32-unknown-unknown"]
