[package]
name = "sqlite-wasm-rs"
version = "0.3.8"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "Provide sqlite solution for wasm32-unknown-unknown target."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "javascript"]

[dependencies]
fragile = "2.0.1"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["sync"] }
thiserror = "2.0.12"

js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "StorageManager",
  "FileSystemSyncAccessHandle",
  "FileSystemDirectoryHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemReadWriteOptions",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "FileSystemGetFileOptions",
  "FileSystemFileHandle",
  "Url",
]}
wasm-array-cp = "0.1.1"

indexed_db_futures = { version = "0.6.4", optional = true }
sqlite-wasm-libc = { path = "../sqlite-wasm-libc", version = "0.1.0", optional = true }

[target.'cfg(not(target_feature = "atomics"))'.dependencies]
parking_lot = "0.12"

[target.'cfg(target_feature = "atomics")'.dependencies]
parking_lot = { version = "0.12", features = ["nightly"] }

[features]
default = ["bundled"]
bundled = ["cc"]
buildtime-bindgen = ["bindgen"]
precompiled = []
custom-libc = ["sqlite-wasm-libc"]
# SQLite3MultipleCiphers
# <https://github.com/utelle/SQLite3MultipleCiphers>
# <https://utelle.github.io/SQLite3MultipleCiphers>
sqlite3mc = ["bundled"]
relaxed-idb = ["indexed_db_futures"]

[dev-dependencies]
paste = "1.0.15"
wasm-bindgen-test = "0.3.50"
web-time = "1.1.0"

[build-dependencies]
bindgen = { version = "0.71", optional = true }
cc = { version = "1.2.27", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["precompiled"]
targets = ["wasm32-unknown-unknown"]
