[package]
name = "sqlw_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlite-wasm-vfs = { path = "../crates/sqlite-wasm-vfs" }
sqlite-wasm-rs = { path = "../" }
wasm-bindgen-test = "0.3.54"

[features]
sqlite3mc = ["sqlite-wasm-rs/sqlite3mc"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
