[package]
name = "sqlw_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlite-wasm-vfs = "0.2.0"
sqlite-wasm-rs = "0.5.0"
wasm-bindgen-test = "0.3.54"

[features]
sqlite3mc = ["sqlite-wasm-rs/sqlite3mc"]
uuid = ["sqlite-wasm-rs/uuid"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
