[package]
name = "wsqlite3-sys"
version = "0.1.0"
links = "wsqlite3"
readme.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]

[build-dependencies]
cc = "1.2.27"
bindgen = { version = "0.72", optional = true }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[features]
# SQLite3MultipleCiphers
# <https://github.com/utelle/SQLite3MultipleCiphers>
# <https://utelle.github.io/SQLite3MultipleCiphers>
sqlite3mc = []

