[package]
name = "custom-libc"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-wasm-rs = { path = "../../sqlite-wasm-rs", features = ["custom-libc"] }

js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-test = "0.3.49"
web-sys = { version = "0.3.77", features = [
  "Performance",
  "Window",
]}
