[package]
name = "nodejs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.104"
sqlite-wasm-rs = { path = "../.." }
sqlite-wasm-uuid4 = { path = "../../extensions/uuid4" }
sqlite-wasm-uuid7 = { path = "../../extensions/uuid7" }
wasm-bindgen-futures = "0.4.54"

[lib]
crate-type = ["cdylib"]
