[package]
name = "sqlite-wasm-vec"
version = "0.1.0"
links = "sqlite_vec0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "`wasm32-unknown-unknown` bindings to the `sqlite-vec` extension."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "sqlite-vec"]
rust-version = "1.78.0"

[dependencies]

[build-dependencies]
cc = "1.2.44"

[features]
# Don't use it!
# This feature used to pass crates.io build!
__docsrs = []

[dev-dependencies]
sqlite-wasm-rs = { path = "../../" }
wasm-bindgen-test = "0.3.55"

[package.metadata.docs.rs]
features = ["__docsrs"]
targets = ["wasm32-unknown-unknown"]
