[package]
name = "sqlite-wasm-vec"
version = "0.1.3"
links = "wsqlite_vec0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "`wasm32-unknown-unknown` bindings to the `sqlite-vec` extension."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "sqlite-vec"]

[dependencies]

[build-dependencies]
cc = "1.2.44"

[dev-dependencies]
wasm-bindgen-test.workspace = true
rusqlite.workspace = true

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
