[package]
name = "sqlite-wasm-uuid4"
version = "0.1.0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
description = "`wasm32-unknown-unknown` bindings to the `uuid4` extension."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "uuid4"]
links = "sqlite_uuid4"

[dependencies]
wasm-bindgen = "0.2.104"

[build-dependencies]
cc = "1.2.44"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
sqlite-wasm-rs = { path = "../../" }
js-sys = "0.3.81"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
