[package]
name = "sqlite-wasm-uuid4"
version = "0.1.0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
description = "`wasm32-unknown-unknown` bindings to the `uuid4` extension."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "uuid4"]

[dependencies]
uuid = { version = "1.20.0", features = ["v4", "v7", "js", "macro-diagnostics"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.104"
sqlite-wasm-rs = { path = "../../" }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
sqlite-wasm-rs = { path = "../../" }
js-sys = "0.3.81"
rusqlite = "0.38.0"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
