[package]
name = "sqlite-wasm-uuid7"
version = "0.1.0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
description = "`wasm32-unknown-unknown` bindings to the `uuid7` extension."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "uuid7"]

[dependencies]
uuid = { version = "1.20.0", features = ["v4", "v7", "js", "macro-diagnostics"] }
wasm-bindgen = "0.2.104"
sqlite-wasm-rs = { path = "../../" }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
rusqlite = "0.38.0"
sqlite-wasm-rs = { path = "../../" }
js-sys = "0.3.81"
console_error_panic_hook = "0.1.7"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
